# synapse

./: .gitignore  README.md  READMEold.md  main.py  run.txt  run_robot.sh  settings.json
AP/: CMakeLists.txt
AP/main/: main.c
App/: App.tsx  app.json  cesconfig.jsonc  package-lock.json  package.json
App/components/: Container.tsx  EditScreenInfo.tsx  ObjectCaptureScreen.tsx  ScreenContent.tsx
App/types/: react-native-object-capture.d.ts
CAD/: Laptop-Holder-L.step  Laptop-Holder-L.stl
HARP/: Cargo.toml  SynapseRunner.py  Websocket.py  harp_arm.json  main.py  run.txt  settings.json  setup.sh  setup_so101.sh
HARP Synapse/: SynapseRunner.py
HARP/calibrations/: follower.json  leader.json
HARP/outputs/dataset/meta/: info.json
HARP/src/: lib.rs  lidar.rs  main.rs  viewer.rs
mission/code/: training-models-on-rocm.ipynb
mission/code/calibrations/: leader.json
mission/wandb/latest-run/: run-gssco1kq.wandb
mission/wandb/run-20251221_191003-gssco1kq/files/: config.yaml  requirements.txt  wandb-metadata.json
missions/calibrations/: follower.json
