[package]
name = "harp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# WebSocket support built on top of tokio + tungstenite
tokio-tungstenite = "0.28.0"
# Utilities for Stream/Sink combinators
futures-util = "0.3"
url = "2.5.7"

# Parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
anyhow = "1.0"
flate2 = "1.0"

# Optional viewer (client)
tungstenite = "0.20"
# For simple 3D viewing
kiss3d = "0.37"
nalgebra = "0.34"

# Channel to forward frames in-process
crossbeam-channel = "0.5"
